# GPSeg

./: CMakeLists.txt  FeatureEvalOp.cpp  FeatureEvalOp.hpp  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
Evaluator/: FeatureEvalOp.cpp  FeatureEvalOp.hpp
Operators/: MatAdd.cpp  MatBlur.cpp  MatIx.cpp  MatIy.cpp  MatMul.cpp  MatMulDou.cpp  MatSquare.cpp  MatSub.cpp  MatThresh.cpp
Operators/Impl/: MatThresh.hpp
Thread/: EvolveThread.cpp  EvolveThread.h  SegController.h  SegEvolver.h
Thread/Impl/: SegController.cpp  SegEvolver.cpp
res/: GPIMAGEPROC.conf
